# simple-renderer

./: CMakeLists.txt
cmake/: CompileShader.cmake
src/: .clang_complete  CMakeLists.txt  application.cpp  application.hpp  base-includes.hpp  buffer.cpp  buffer.hpp  commandbuffer.cpp  commandbuffer.hpp  common.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  resource.cpp  resource.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  ubo.hpp  utils.cpp  utils.hpp
